--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=demo
+spring.application.name=To-Do-List
 
 spring.datasource.url=jdbc:mysql://192.168.9.193:3306/to-do-list?charset=utf8&autocommit=true&autoReconnect=true&serverTimezone=GMT%2B8
 spring.datasource.username=Beiming
