--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=To-Do-List
 
-spring.datasource.url=jdbc:mysql://192.168.9.193:3306/to-do-list?charset=utf8&autocommit=true&autoReconnect=true&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/to-do-list
 spring.datasource.username=Beiming
 spring.datasource.password=518105309
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
