--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,20 +12,24 @@ on:
   pull_request:
     branches:
       - main
-
+      - service
+      - settings
+      - controller
+      - mapper
+      - domain
+      
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '11'
+          distribution: ''
 
       - name: Cache Maven packages
         uses: actions/cache@v3
