--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -2,24 +2,64 @@ name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - main
-      - service
-      - settings
-      - controller
-      - mapper
-      - domain
+    branches: 
+      - "master"
+      - "settings"
+      - "xml-files"
+      - "service"
+      - "domain"
+      - "controller"
+      - "mapper"
   pull_request:
-    branches:
-      - main
-      - service
-      - settings
-      - controller
-      - mapper
-      - domain
+    branches: 
+      - "master"
+      - "settings"
+      - "xml-files"
+      - "service"
+      - "domain"
+      - "controller"
+      - "mapper"
       
 jobs:
   build:
+    runs-on: ubuntu-latest
+    services:
+      db:
+        image: mysql:latest
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: to-do-list
+          MYSQL_USER: Beiming
+          MYSQL_PASSWORD: 518105309
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven
+
+      - name: Wait for MySQL to be ready
+        run: |
+          echo "Waiting for MySQL to be ready..."
+          until mysql -h 127.0.0.1 -u Beiming -p518105309 -e "SHOW DATABASES;"; do sleep 1; done
+
+      - name: Build with Maven
+        run: mvn clean package -Dspring.datasource.url=jdbc:mysql://127.0.0.1:3306/to-do-list
+
+  service-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -29,34 +69,61 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: ''
+          java-version: 17
+          distribution: 'temurin'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
+      - name: Build and run service tests
+        if: github.ref == 'refs/heads/service'
+        run: mvn -Dtest=org.demo.todo.service.* test
+
+  controller-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+          java-version: 17
+          distribution: 'temurin'
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
+      - name: Build and run controller tests
+        if: github.ref == 'refs/heads/controller'
+        run: mvn -Dtest=org.demo.todo.controller.* test
 
-      - name: Run tests
-        run: |
-          if [ "${GITHUB_REF##*/}" = "main" ]; then
-            mvn test
-          elif [ "${GITHUB_REF##*/}" = "service" ]; then
-            mvn -Dtest=org.demo.todo.service.* test
-          elif [ "${GITHUB_REF##*/}" = "settings" ]; then
-            mvn -Dtest=org.demo.todo.settings.DatabaseConnectionTest test
-          elif [ "${GITHUB_REF##*/}" = "controller" ]; then
-            mvn -Dtest=org.demo.todo.controller.* test
-          elif [ "${GITHUB_REF##*/}" = "mapper" ]; then
-            mvn -Dtest=org.demo.todo.mapper.* test
-          elif [ "${GITHUB_REF##*/}" = "domain" ]; then
-            mvn -Dtest=org.demo.todo.domain.* test
-          fi
+  mapper-tests:
+    runs-on: ubuntu-latest
 
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Build and run mapper tests
+        if: github.ref == 'refs/heads/mapper'
+        run: mvn -Dtest=org.demo.todo.mapper.* test
+
+  domain-tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Build and run domain tests
+        if: github.ref == 'refs/heads/domain'
+        run: mvn -Dtest=org.demo.todo.domain.* test
+
