--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -60,6 +60,9 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -Dspring.datasource.url=jdbc:mysql://127.0.0.1:3306/to-do-list
 
+      - name: Generate code coverage report
+        run: mvn jacoco:report
+
   service-tests:
     runs-on: ubuntu-latest
 
@@ -76,6 +79,10 @@ jobs:
       - name: Build and run service tests
         if: github.ref == 'refs/heads/service'
         run: mvn -Dtest=org.demo.todo.service.* test
+
+      - name: Generate code coverage report for service tests
+        if: github.ref == 'refs/heads/service'
+        run: mvn jacoco:report
 
   controller-tests:
     runs-on: ubuntu-latest
@@ -94,6 +101,10 @@ jobs:
         if: github.ref == 'refs/heads/controller'
         run: mvn -Dtest=org.demo.todo.controller.* test
 
+      - name: Generate code coverage report for controller tests
+        if: github.ref == 'refs/heads/controller'
+        run: mvn jacoco:report
+
   mapper-tests:
     runs-on: ubuntu-latest
 
@@ -110,6 +121,10 @@ jobs:
       - name: Build and run mapper tests
         if: github.ref == 'refs/heads/mapper'
         run: mvn -Dtest=org.demo.todo.mapper.* test
+
+      - name: Generate code coverage report for mapper tests
+        if: github.ref == 'refs/heads/mapper'
+        run: mvn jacoco:report
 
   domain-tests:
     runs-on: ubuntu-latest
@@ -128,7 +143,7 @@ jobs:
         if: github.ref == 'refs/heads/domain'
         run: mvn -Dtest=org.demo.todo.domain.* test
 
-      - name: Build and run domain tests
+      - name: Generate code coverage report for domain tests
         if: github.ref == 'refs/heads/domain'
-        run: mvn -Dtest=org.demo.todo.domain.* test
+        run: mvn jacoco:report
 
